@@ -1,3 +1,3 @@
-EBUILD xbmc-9999.ebuild 5355 RMD160 579ecdd74ade4434bbcc68f88756098d73165e6a SHA1 a2df22e23ddc4749a4b92d815174f5020b91006b SHA256 605619e39d7f6d0471226fa76dda32d06fb22981bcff844897d456d390c8f5e3
-MISC ChangeLog 989 RMD160 48a541b39abee893a039037aad176e5d7563ece5 SHA1 a938ae1cfc4867fbc1132bbb74cd569c19876e15 SHA256 7e22c58227898ce982ef5181964e87a26f78ed8ab92ef24781403df53ebe2509
+EBUILD xbmc-9999.ebuild 5119 RMD160 9035f911a9aba52859dae53798aca73ad1aae526 SHA1 b78ff798efee3ca408427c9d4ce2654e27982520 SHA256 b8e783ff33efdbf5dc14ca9dbac58a146878f1bd68972499029463716c051d11
+MISC ChangeLog 1139 RMD160 569645d8078c9e372fdda064a3590c05cd18ca8d SHA1 29215f091a8e4f6b7bd552ca2b1369dffb6f1316 SHA256 a32900bbd004eaa88fef03b8bbcdd9da0e6053e5bad77c6e28c5a76b02679f94
 MISC metadata.xml 628 RMD160 beddf7fd3afcdc89142c59ea432e5475e0441c70 SHA1 726e050418da10f47de0c7eaff132bf22213b0b1 SHA256 ac1449664c3ff0d80be9965114af13dd1b29cb4582a18e4f6aeac7afc4e6cf8d
