@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Jun 2011; kTitan xbmc-9999.ebuild:
+  fixed compile and cleanup of the ebuild
+
   26 Jan 2011; kTitan xbmc-9999.ebuild:
   some little improvments
 
